# overlay-measure

./: .gitignore  CHANGELOG.md  PL20260524-21.29.json  PLASDS002overlay_recipe.json  PLASDS002overlay_results.xlsx  PS002_Dxy_result.xlsx  README.md  design-qa.md  overlay_recipe.json  overlay_recipe1.json  pyproject.toml  requirements.lock.txt  requirements.txt  start_overlay_measure.bat
legacy/: README.md
legacy/v1.0.5/: PLASDS002overlay_recipe.json  main.py  overlay_recipe.json  overlay_recipe1.json  overlay_results.xlsx  requirements.txt
legacy/v1.0.5/overlay_measure/: circle_ellipse_fitter.py  overlay_calculator.py  production_measurement.py  ui_main.py
legacy/v1.0.5/sample_data/: demo_recipe.json  (+1 more)
overlay_measure/: access_control.py  auto_mark_detector.py  batch_pairing.py  caliper_circle_detector.py  circle_ellipse_fitter.py  export_naming.py  image_loader.py  measurement_engine.py  measurement_service.py  measurement_units.py  models.py  overlay_calculator.py  production_measurement.py  quality_gate.py  quality_profiles.py  recipe_integrity.py  recipe_library.py  recipe_manager.py  region_center_detector.py  result_exporter.py  runtime_support.py  rz_calculator.py  subpixel_edge_detector.py  traceability.py  ui_main.py
sample_data/: demo_annulus_recipe.json  demo_mixed_square_circle_recipe.json  demo_square_recipe.json
tests/: test_measurement_service.py  test_recipe_library.py  test_ui_smoke.py  test_units_and_reports.py  test_v154_roi_state.py  test_v160_production.py  test_v170_circle_and_roi.py  test_v171_quality_profiles.py  test_v172_roi_feedback.py
