[project]
name = "overlay-measure"
version = "1.7.2"
description = "Overlay mark measurement desktop tool"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
  "PySide6>=6.6,<7",
  "numpy>=1.24,<3",
  "opencv-python>=4.8,<5",
  "pandas>=2.0,<4",
  "openpyxl>=3.1,<4",
  "Pillow>=10.0,<13",
]

[project.optional-dependencies]
dev = ["pytest>=8,<10"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
